# strictly-dancing

./: .gitignore  .mcp.json  .prettierignore  CLAUDE.md  CONTEXT.md  DEPLOYMENT_STEPS.md  PLAN.md  PRD.md  README.md  docker-compose.yml  eslint.config.base.mjs  package.json  render.yaml  tsconfig.base.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260129_000000_initial_extensions.py  20260129_010000_create_users_table.py  20260129_020000_create_dance_styles_table.py  20260129_030000_create_host_profiles_table.py  20260129_040000_create_host_dance_styles_table.py  20260129_050000_create_bookings_table.py  20260129_060000_create_availability_tables.py  20260129_070000_create_conversations_and_messages_tables.py  20260129_080000_create_reviews_table.py  20260129_090000_add_performance_indexes.py  20260129_100000_create_push_tokens_table.py  20260129_110000_create_verification_documents_table.py  20260129_120000_make_password_hash_nullable.py  20260129_130000_add_avatar_columns_to_users.py  20260129_140000_add_pg_trgm_fuzzy_search.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  deps.py  geo.py  logging.py  middleware.py  rate_limit.py  sentry.py
backend/app/models/: __init__.py  availability.py  base.py  booking.py  conversation.py  dance_style.py  host_dance_style.py  host_profile.py  push_token.py  review.py  user.py  (+1 more)
backend/tests/: __init__.py  conftest.py
mcp-postgres-server/: Dockerfile  pyproject.toml
mcp-postgres-server/app/: __init__.py  main.py
ralph/: README.md  (+1 more)
(+210 files in other folders)
